<resources>
    <string name="app_name">Sync</string>
    <string name="make_login">Faça login</string>
    <string name="welcome_message">Erga a taça para o infinito com alegria, pois as horas que se foram são irrecuperáveis; grave tua marca na tela da existência com pinceladas de significado</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="email_hint">d.luffy@email.com</string>
    <string name="password_hint">Pelo menos 8 caracteres</string>
    <string name="password_small">Não compartilhe sua senha, mesmo que seja com seu(a) namorado(a). A sua segurança é importante para nós!</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="enter">Entrar</string>
    <string name="sign_in_google">Entrar com Google</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_up_welcome">Dê as boas-vindas à jornada infinita. Estamos emocionados por você se juntar a nós. Vamos começar a explorar juntos</string>
    <string name="name">Nome</string>
    <string name="name_hint">Robin</string>
    <string name="remove">Remover</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_hint">Miss Sunday</string>
    <string name="name_small">No mínimo 2 caracteres. Esse nome NÃO será exibido para outros usuários</string>
    <string name="nickname_small">No mínimo 2 caracteres. Nickname será visível para todos os usuários</string>
    <string name="year">Em qual ano você nasceu?</string>
    <string name="year_hint">Ano de nascimento</string>
    <string name="year_small">Precisa ter pelo menos 14 anos de idade</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="other">Outro</string>
    <string name="email_invalid">Email é inválido ou não foi informado</string>
    <string name="password_invalid">Senha é inválida ou não foi informada</string>
    <string name="generic_error">Oopss... tivemos um erro. Tente novamente.</string>
    <string name="upload_user_photo_error">Oopss... tivemos um erro ao fazer o upload da sua foto de perfil.</string>
    <string name="upload_user_extra_error">Oopss... tivemos um erro ao criar seu perfil. Tente novamente</string>
    <string name="update_user_extra_error">Oopss... tivemos um erro ao encontrar informações do seu usuário</string>
    <string name="web_client_id">407382943479-95m8ds0vli45jnb5d1oiudkal1b34ik2.apps.googleusercontent.com</string>
    <string name="login_failure">Erro ao fazer login</string>
    <string name="forgot_password_txt">Digite seu email abaixo e nós lhe enviaremos um link para que seja possível realizar a troca da senha</string>
    <string name="forgot_email_hint">enma.spa@email.com</string>
    <string name="send">Enviar</string>
    <string name="email_send">Enviamos um email para você</string>
    <string name="invalid_credentials">Oopss... suas credenciais estão inválidas</string>
    <string name="user_not_found">Esse usuário não existe</string>
    <string name="email_in_use">Email já está sendo utilizado</string>
    <string name="wait">Aguarde...</string>
    <string name="messages">Mensagens</string>
    <string name="explore">Explorar</string>
    <string name="notify">Notificações</string>
    <string name="saves">Salvos</string>
    <string name="communities">Comunidades</string>
    <string name="settings">Configurações</string>
    <string name="system">Sistema</string>
    <string name="help_and_feedback">Ajuda e feedback</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sair</string>
    <string name="user_avatar">Avatar do usuário</string>
    <string name="complete_profile">Percebemos que algumas informações estão faltando em seu perfil. Por favor, termine o seu cadastro</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Coloque informações relevantes sobre você :)</string>
    <string name="bio_small">200</string>
    <string name="profile">Perfil</string>
    <string name="posts">Publicações</string>
    <string name="premium">Premium</string>
    <string name="about">Sobre</string>
    <string name="my_communities">Minhas comunidades</string>
    <string name="gender_description">Gênero do usuário</string>
    <string name="go_back_button_description">Botão de voltar</string>
    <string name="change_avatar">Alterar avatar?</string>
    <string name="upload_user_photo_success">Seu avatar foi atualizado com sucesso</string>
    <string name="upload_user_success">Seu perfil foi atualizado com sucesso</string>
    <string name="create_your_community">Crie a sua</string>
    <string name="explore_communities">Explorar</string>
    <string name="create_community_text">A sua comunidade pode se tornar um espaço para discussão de temas ou cultivo de novas amizades.</string>
    <string name="select_icon">Selecione um ícone</string>
    <string name="community_icon_description">Ícone da comunidade</string>
    <string name="community_name_label">Dê um nome a sua comunidade</string>
    <string name="community_name_hint">Comunidade #</string>
    <string name="community_name_small">Pelo menos 2 caracteres</string>
    <string name="community_description_label">Descrição e regras da comunidade</string>
    <string name="community_description_small">Aqui você pode dar detalhes do que acontece na comunidade, listar regras e até nome dos criadores. Seja criativo</string>
    <string name="community_visibility_label">Qual a visibilidade da sua comunidade?</string>
    <string name="community_public">Pública</string>
    <string name="community_private">Privada</string>
    <string name="community_visibility_small">Se a comunidade for privada, não aparecerá nas buscas. Os usuários só podem fazer parte se usarem um código de convite</string>
    <string name="create_community">Criar comunidade</string>
    <string name="create_community_alert">Ao criar, você estará concordando com nossas diretrizes</string>
    <string name="community_icon_is_required">Você precisa selecionar um ícone primeiro</string>
    <string name="community_name_is_required">O nome da sua comunidade precisa conter pelo menos 2 caracteres</string>
    <string name="community_description_invalid">Descrição está inválida</string>
    <string name="upload_community_icon_error">Encontramos um erro ao tentar fazer o upload do ícone da comunidade</string>
    <string name="upload_community_error">Parece que estamos passando por algum problema para salvar a comunidade. Pedimos desculpa por isso</string>
    <string name="generic_success">Salvo com sucesso!</string>
    <string name="update_communities_list_error">Não foi possível carregar a lista de comunidades</string>
    <string name="drawer_bottom_image_button_description">Botão inferior para abrir as opções de menu</string>
    <string name="drawer_top_button_description">Botão superior para abrir o menu de opções</string>
</resources>