<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="64dp">

        <ImageButton
            android:id="@+id/goBackTop"
            android:src="@drawable/ic_go_back_arrow"
            android:background="@drawable/drawable_button_bg"
            app:tint="@color/title"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/go_back_button_description" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/edit_profile"
            android:textColor="@color/title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/goBackTop"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary"
            app:cardCornerRadius="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <ImageView
                android:id="@+id/profile"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile_placeholder"
                app:tint="@color/textPlaceholder" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/labelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/card" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:maxLength="100"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="name"
            android:background="@drawable/auth_input"
            android:hint="@string/name_hint"
            android:inputType="text|textPersonName"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelName" />

        <TextView
            android:id="@+id/smallName"
            style="@style/Theme.Sync.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_small"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/labelNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nickname"
            app:layout_constraintTop_toBottomOf="@id/smallName" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:maxLength="50"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="username"
            android:background="@drawable/auth_input"
            android:hint="@string/nickname_hint"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelNickname" />

        <TextView
            android:id="@+id/smallNickname"
            style="@style/Theme.Sync.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_small"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/nickname" />

        <TextView
            android:id="@+id/labelBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bio"
            app:layout_constraintTop_toBottomOf="@id/smallNickname" />

        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/auth_input"
            android:hint="@string/bio_hint"
            android:inputType="textAutoCorrect|textAutoComplete|textMultiLine"
            android:paddingHorizontal="16dp"
            android:gravity="top"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelBio" />

        <TextView
            android:id="@+id/smallBio"
            style="@style/Theme.Sync.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_small"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toBottomOf="@id/bio" />


        <TextView
            android:textStyle="bold"
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/male"
            app:layout_constraintEnd_toStartOf="@id/female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smallBio" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/female"
            app:layout_constraintEnd_toStartOf="@id/other"
            app:layout_constraintStart_toEndOf="@id/male"
            app:layout_constraintTop_toBottomOf="@id/smallBio" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/other"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/female"
            app:layout_constraintTop_toBottomOf="@id/smallBio" />

        <Button
            android:id="@+id/save"
            style="@style/SuccessButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/male" />

        <Button
            android:id="@+id/goBack"
            style="@style/NoBorderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cancel"
            android:textColor="@color/danger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>