<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="32dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/app_name"
            android:textColor="@color/title"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/appName" />

        <TextView
            android:id="@+id/makeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/make_login"
            android:textColor="@color/title"
            android:textSize="26sp"
            app:layout_constraintTop_toBottomOf="@id/wm" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/makeLogin" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/auth_input"
            android:drawableEnd="@drawable/email_at"
            android:drawablePadding="8dp"
            android:drawableTint="@color/textPlaceholder"
            android:hint="@string/email_hint"
            android:inputType="textAutoComplete|textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelEmail" />

        <TextView
            android:id="@+id/labelPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/auth_input"
            android:drawableEnd="@drawable/lock"
            android:drawablePadding="8dp"
            android:drawableTint="@color/textPlaceholder"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelPass" />

        <TextView
            android:id="@+id/smallPass"
            style="@style/Theme.Sync.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_small"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smallPass" />

        <Button
            android:id="@+id/signInButton"
            style="@style/AuthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

        <Button
            android:id="@+id/signInGoogle"
            style="@style/NoBorderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="8dp"
            android:paddingHorizontal="16dp"
            android:text="@string/sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/signUp"
            style="@style/NoBorderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="16dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInGoogle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>